emp add from desing ready in admin

--- a/Web.config
+++ b/Web.config
@@ -14,6 +14,10 @@
   
 <connectionStrings>  
     <add name="sqlcon" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\ems.mdf;Integrated Security=True " providerName="System.Data.SqlClient" />   
-</connectionStrings>  
+</connectionStrings>
+
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 
 </configuration>
